--- a/index.html
+++ b/index.html
@@ -70,25 +70,23 @@
                 <div class="text">
                     <h2 class="title">Sobre nós</h2>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Suspendisse sagittis arcu quis nisi luctus, id accumsan felis
-                        tristique. Proin quis bibendum diam. Sed consequat nisl laoreet
-                        eros ultricies pellentesque. Nullam in est porta, pellentesque
-                        massa vitae, vehicula risus.
+                        Somos uma empresa de prestação de serviços especializada em consultoria acadêmica, dedicada a ajudar estudantes e profissionais a 
+                        alcançarem seus objetivos educacionais. 
+                        Nossa equipe de profissionais altamente qualificados inclui graduados, mestres e especialistas em diversas áreas do conhecimento.
                     </p>
                     <br />
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo
-                        error incidunt ex. Neque, quibusdam quae earum tempore delectus
-                        libero dolorum mollitia doloremque consequatur, officia rem
-                        pariatur deleniti culpa obcaecati quos?
+                        Na Sua Aprovação, compreendemos os desafios que os alunos enfrentam durante suas jornadas acadêmicas e profissionais. 
+                        Por isso, oferecemos uma ampla gama de serviços personalizados para atender às necessidades individuais de cada cliente. 
+                        Se você está buscando suporte na elaboração de um trabalho de conclusão de curso (TCC), 
+                        um artigo acadêmico ou até mesmo um artigo para um programa de MBA, estamos aqui para ajudar.
                     </p>
                     <br />
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-                        optio, amet debitis ipsa repellendus atque voluptates, praesentium
-                        tempore rerum qui neque vero illum laboriosam expedita alias
-                        reprehenderit cum veniam officiis!
+                        Nossa equipe de consultores experientes está pronta para orientá-lo(a) em todas as etapas do processo. 
+                        Desde a definição do tema até a formatação final, garantimos a qualidade e a originalidade de cada trabalho produzido. 
+                        Nosso compromisso é fornecer um serviço confiável, ético e personalizado, 
+                        sempre respeitando as diretrizes acadêmicas e as necessidades individuais de cada cliente.
                     </p>
                 </div>
             </div>
@@ -109,7 +107,7 @@
                     <div class="card">
                         <h3 class="title">TCC</h3>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum repellat cumque aperiam velit incidunt 
+                            Elaboração completa do seu trabalho de conclusão. 
                         </p><br>
                         <a class="button" href="https://api.whatsapp.com/send?phone=5581999780650&text=Ol%C3%A1,%20gostaria%20de%20realizar%20um%20or%C3%A7amento">Quero um orçamento</a>
                     </div>
@@ -117,7 +115,7 @@
                     <div class="card">
                         <h3 class="title">Artigo Científico</h3>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum repellat cumque aperiam velit incidunt
+                            Produção de artigos de qualidade e relevância.
                         </p><br>
                         <a class="button" href="https://api.whatsapp.com/send?phone=5581999780650&text=Ol%C3%A1,%20gostaria%20de%20realizar%20um%20or%C3%A7amento">Quero um orçamento</a>
                     </div>
@@ -125,7 +123,7 @@
                     <div class="card">
                         <h3 class="title">Monografia</h3>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum repellat cumque aperiam velit incidunt
+                            Orientação acadêmica personalizada para sua monografia.
                         </p><br>
                         <a class="button" href="https://api.whatsapp.com/send?phone=5581999780650&text=Ol%C3%A1,%20gostaria%20de%20realizar%20um%20or%C3%A7amento">Quero um orçamento</a>
                     </div>
@@ -133,7 +131,7 @@
                     <div class="card">
                         <h3 class="title">Relatórios de Estágio</h3>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum repellat cumque aperiam velit incidunt
+                            Destaque suas experiências profissionais.
                         </p><br>
                         <a class="button" href="https://api.whatsapp.com/send?phone=5581999780650&text=Ol%C3%A1,%20gostaria%20de%20realizar%20um%20or%C3%A7amento">Quero um orçamento</a>
                     </div>
@@ -141,7 +139,7 @@
                     <div class="card">
                         <h3 class="title">Revisão Sistemática</h3>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum repellat cumque aperiam velit incidunt
+                            Análise criteriosa de literatura especializada.
                         </p><br>
                         <a class="button" href="https://api.whatsapp.com/send?phone=5581999780650&text=Ol%C3%A1,%20gostaria%20de%20realizar%20um%20or%C3%A7amento">Quero um orçamento</a>
                     </div>
@@ -149,7 +147,7 @@
                     <div class="card">
                         <h3 class="title">Formatações</h3>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum repellat cumque aperiam velit incidunt
+                            Padronização impecável para seu documento.
                         </p><br>
                         <a class="button" href="https://api.whatsapp.com/send?phone=5581999780650&text=Ol%C3%A1,%20gostaria%20de%20realizar%20um%20or%C3%A7amento">Quero um orçamento</a>
                     </div>
@@ -157,7 +155,7 @@
                     <div class="card">
                         <h3 class="title">Trabalhos de T.I</h3>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum repellat cumque aperiam velit incidunt
+                            Soluções acadêmicas em tecnologia.
                         </p><br>
                         <a class="button" href="https://api.whatsapp.com/send?phone=5581999780650&text=Ol%C3%A1,%20gostaria%20de%20realizar%20um%20or%C3%A7amento">Quero um orçamento</a>
                     </div>
@@ -165,7 +163,7 @@
                     <div class="card">
                         <h3 class="title">Projetos Web</h3>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum repellat cumque aperiam velit incidunt
+                            Desenvolvimento de websites inovadores.
                         </p><br>
                         <a class="button" href="https://api.whatsapp.com/send?phone=5581999780650&text=Ol%C3%A1,%20gostaria%20de%20realizar%20um%20or%C3%A7amento">Quero um orçamento</a>
                     </div>
@@ -173,7 +171,7 @@
                     <div class="card">
                         <h3 class="title">Projetos Back-end</h3>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum repellat cumque aperiam velit incidunt
+                            Programação robusta para sua aplicação.
                         </p><br>
                         <a class="button" href="https://api.whatsapp.com/send?phone=5581999780650&text=Ol%C3%A1,%20gostaria%20de%20realizar%20um%20or%C3%A7amento">Quero um orçamento</a>
                     </div>
@@ -181,7 +179,7 @@
                     <div class="card">
                         <h3 class="title">Design de Telas</h3>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum repellat cumque aperiam velit incidunt
+                            Visualize sua ideia com designs interativos.
                         </p><br>
                         <a class="button" href="https://api.whatsapp.com/send?phone=5581999780650&text=Ol%C3%A1,%20gostaria%20de%20realizar%20um%20or%C3%A7amento">Quero um orçamento</a>
                     </div>
@@ -189,7 +187,7 @@
                     <div class="card">
                         <h3 class="title">Serviços de Design</h3>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum repellat cumque aperiam velit incidunt
+                            Criação de materiais atraentes e profissionais.
                         </p><br>
                         <a class="button" href="https://api.whatsapp.com/send?phone=5581999780650&text=Ol%C3%A1,%20gostaria%20de%20realizar%20um%20or%C3%A7amento">Quero um orçamento</a>
                     </div>
@@ -197,7 +195,7 @@
                     <div class="card">
                         <h3 class="title">Consultoria Dev</h3>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum repellat cumque aperiam velit incidunt
+                            Suporte especializado para seu desenvolvimento.
                         </p><br>
                         <a class="button" href="https://api.whatsapp.com/send?phone=5581999780650&text=Ol%C3%A1,%20gostaria%20de%20realizar%20um%20or%C3%A7amento">Quero um orçamento</a>
                     </div>
@@ -256,7 +254,7 @@
                                 </p>
                                 <cite>
                                     <img src="assets/Fotos/img-3.jpg" alt="foto de Valesca Fabris">
-                                    Pessoa 3
+                                    Matheus Valença
                                 </cite>
                             </blockquote>
                         </div>
